more readability fixes

--- a/assets/scss/shortcodes/_profile-intro.scss
+++ b/assets/scss/shortcodes/_profile-intro.scss
@@ -4,7 +4,7 @@
   align-items: center;
   gap: 1.5rem;
   margin-bottom: 2rem;
-  font-size: .8em;
+  font-size: 1em;
 }
 
 .profile-intro-container strong {
